--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 										
 										<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
 										<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-										<a class="bt-default" id="play-opening" href="javascript:void(0);" >Área de clientes</a>
+										<a class="bt-default" id="play-opening" href="javascript:void(0);" >Call to Action</a>
 									</div>
 								</li>
 							</ul>
