desktop change request

--- a/index.html
+++ b/index.html
@@ -17,20 +17,28 @@
 				<div class="container">
 					<div class="row">
 						<ul>
-							<li class="col three">
-								FALE COM UM CONSULTOR: <a href="tel:08000217070">0800 021 7070</a>
+							<li class="col five">
+								<a href="tel:08000217070">0800 021 7070</a>
+							</li>
+							<li class="col two atendimento">
+								<a href="#">Atendimento Online</a>
+								<ul class="open-atendimento">
+									<li class="suporte">
+										<a href="#">Suporte</a>
+										<ul class="open-suporte">
+											<li><a href="#">Atendimento Online</a></li>
+											<li><a href="#">Fale com os gestores</a></li>
+										</ul>
+									</li>
+									<li class="outter"><a href="#">Comercial</a></li>
+									<li class="outter" ><a href="#">Financeiro</a></li>
+								</ul>
 							</li>
 							<li class="col three">
 								<a href="#">Solicitar Demonstração</a>
-							</li>
-							<li class="col two">
-								<a href="#">Suporte Online</a>
-							</li>
+							</li>							
 							<li class="col two">
 								<a href="#">Área do Cliente</a>
-							</li>
-							<li class="col two">
-								<a href="#">2ª Via do Boleto</a>
 							</li>
 						</ul>
 					</div>
@@ -166,7 +174,7 @@
 										
 										<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
 										<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-										<a class="bt-default" id="play-opening" href="javascript:void(0);" >Call to Action</a>
+										<a class="bt-default yellow" id="play-opening" href="javascript:void(0);" >Clique Aqui</a>
 									</div>
 								</li>
 							</ul>
