--- a/interna.html
+++ b/interna.html
@@ -13,7 +13,7 @@
 	<body class="interna">
 
 		<header class="main-header" id="top-header">
-			<div class="menu-top">
+			<div class="menu-top mb-hidden">
 				<div class="container">
 					<div class="row">
 						<ul>
@@ -49,14 +49,9 @@
 					<div class="row">
 						<div class="col twelve">
 							<ul>
+								<li class="dk-hidden menu-mobile"><a href="#">Menu</a></li>
 								<li class="logo"><a href="/"><span class="icon-logo"></span><h1>Nasajon Sistemas</h1></a></li>
 								<li class="search"><form action="#"><input type="text" placeholder="Buscar" name="textoBusca"> <button><span class="icon-lupa"></span></button></form></li>
-								<li class="main-links">
-									<a href="#">Solicitar Demonstração</a> 
-									<a href="#">Suporte Online</a> 
-									<a href="#">Área do Cliente</a>
-									<a href="#">2ª Via do Boleto</a>
-								</li>
 							</ul>
 						</div>
 					</div>
@@ -67,7 +62,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col twelve">
-							<nav class="main-menu">
+							<nav class="main-menu mb-hidden">
 								<ul>
 									<li><a title="A Nasajon" href="#">A Nasajon</a>
 										<ul>
@@ -113,6 +108,71 @@
 									</li>
 									<li><a title="Trabalhe conosco" href="#">Trabalhe conosco</a></li>
 									<li><a title="Contato" href="#">Contato</a></li>
+								</ul>
+							</nav>
+
+							<nav class="main-menu-mb dk-hidden">
+								<a href="#" class="close-mb-menu">Fechar</a>
+								<ul>
+									<li class="abrindo"><a href="#">A Nasajon</a>
+										<ul>
+											<li><a href="#">Nossa história</a></li>
+											<li><a href="#">Missão, Visão e Valores</a></li>
+											<li><a href="#">Diferenciais</a></li>
+											<li><a href="#">Opinião de quem usa</a></li>
+											<li><a href="#">Prêmios</a></li>
+										</ul>
+									</li>
+									<li class="abrindo"><a href="#">Soluções</a>
+										<ul>
+											<li><a href="#">Empresarias</a></li>
+											<li><a href="#">Contábeis</a></li>
+											<li><a href="#">Comerciais</a></li>
+											<li><a href="#">Gestão de RH</a></li>
+											<li><a href="#">Nuvem</a></li>
+										</ul>
+									</li>
+									<li class="abrindo"><a href="#">Cursos</a>
+										<ul>
+											<li><a href="#">RH e Trabalhista</a></li>
+											<li><a href="#">Contabilidade e Financeiro</a></li>
+											<li><a href="#">Gestão de Carreiras</a></li>
+											<li><a href="#">Com Sistema Nasajon</a></li>
+										</ul>
+									</li>
+									<li class="abrindo"><a href="#">Na mídia</a>
+										<ul>
+											<li><a href="#">Imprensa</a></li>
+											<li><a href="#">Blog</a></li>
+											<li><a href="#">Newsletter</a></li>
+											<li><a href="#">Materiais Gratuitos</a></li>
+										</ul>
+									</li>
+									<li class="abrindo"><a href="#">Universo do cliente</a>
+										<ul>
+											<li><a href="#">Área do Cliente</a></li>
+											<li><a href="#">Portal EAD</a></li>
+											<li><a href="#">Wiki Nasajon</a></li>
+											<li><a href="#">Suporte Online</a></li>
+										</ul>
+									</li>
+									<li><a href="#">Trabalhe conosco</a></li>
+									<li><a href="#">Contato</a></li>
+									<li class="abrindo"><a href="#">Atendimento Online</a>
+										<ul>
+											<li class="abrindo"><a href="#">Suporte</a>
+												<ul>
+													<li><a href="#">Atendimento Online</a></li>
+													<li><a href="#">Fale com os gestores</a></li>
+												</ul>
+											</li>
+											<li><a href="#">Comercial</a></li>
+											<li><a href="#">Financeiro</a></li>
+										</ul>
+									</li>
+
+									<li><a href="#">Solicitar Demonstração</a></li>
+									<li><a href="#">Área do Cliente</a></li>
 								</ul>
 							</nav>
 						</div>
