--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 
 		<header class="main-header" id="top-header">
-			<div class="menu-top">
+			<div class="menu-top mb-hidden">
 				<div class="container">
 					<div class="row">
 						<ul>
@@ -49,14 +49,9 @@
 					<div class="row">
 						<div class="col twelve">
 							<ul>
+								<li class="dk-hidden menu-mobile"><a href="#">Menu</a></li>
 								<li class="logo"><a href="/"><span class="icon-logo"></span><h1>Nasajon Sistemas</h1></a></li>
 								<li class="search"><form action="#"><input type="text" placeholder="Buscar" name="textoBusca"> <button><span class="icon-lupa"></span></button></form></li>
-								<li class="main-links">
-									<a href="#">Solicitar Demonstração</a> 
-									<a href="#">Suporte Online</a> 
-									<a href="#">Área do Cliente</a>
-									<a href="#">2ª Via do Boleto</a>
-								</li>
 							</ul>
 						</div>
 					</div>
@@ -67,7 +62,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col twelve">
-							<nav class="main-menu">
+							<nav class="main-menu mb-hidden">
 								<ul>
 									<li><a title="A Nasajon" href="#">A Nasajon</a>
 										<ul>
@@ -115,12 +110,76 @@
 									<li><a title="Contato" href="#">Contato</a></li>
 								</ul>
 							</nav>
+
+							<nav class="main-menu-mb dk-hidden">
+								<a href="#" class="close-mb-menu">Fechar</a>
+								<ul>
+									<li class="abrindo"><a href="#">A Nasajon</a>
+										<ul>
+											<li><a href="#">Nossa história</a></li>
+											<li><a href="#">Missão, Visão e Valores</a></li>
+											<li><a href="#">Diferenciais</a></li>
+											<li><a href="#">Opinião de quem usa</a></li>
+											<li><a href="#">Prêmios</a></li>
+										</ul>
+									</li>
+									<li class="abrindo"><a href="#">Soluções</a>
+										<ul>
+											<li><a href="#">Empresarias</a></li>
+											<li><a href="#">Contábeis</a></li>
+											<li><a href="#">Comerciais</a></li>
+											<li><a href="#">Gestão de RH</a></li>
+											<li><a href="#">Nuvem</a></li>
+										</ul>
+									</li>
+									<li class="abrindo"><a href="#">Cursos</a>
+										<ul>
+											<li><a href="#">RH e Trabalhista</a></li>
+											<li><a href="#">Contabilidade e Financeiro</a></li>
+											<li><a href="#">Gestão de Carreiras</a></li>
+											<li><a href="#">Com Sistema Nasajon</a></li>
+										</ul>
+									</li>
+									<li class="abrindo"><a href="#">Na mídia</a>
+										<ul>
+											<li><a href="#">Imprensa</a></li>
+											<li><a href="#">Blog</a></li>
+											<li><a href="#">Newsletter</a></li>
+											<li><a href="#">Materiais Gratuitos</a></li>
+										</ul>
+									</li>
+									<li class="abrindo"><a href="#">Universo do cliente</a>
+										<ul>
+											<li><a href="#">Área do Cliente</a></li>
+											<li><a href="#">Portal EAD</a></li>
+											<li><a href="#">Wiki Nasajon</a></li>
+											<li><a href="#">Suporte Online</a></li>
+										</ul>
+									</li>
+									<li><a href="#">Trabalhe conosco</a></li>
+									<li><a href="#">Contato</a></li>
+									<li class="abrindo"><a href="#">Atendimento Online</a>
+										<ul>
+											<li class="abrindo"><a href="#">Suporte</a>
+												<ul>
+													<li><a href="#">Atendimento Online</a></li>
+													<li><a href="#">Fale com os gestores</a></li>
+												</ul>
+											</li>
+											<li><a href="#">Comercial</a></li>
+											<li><a href="#">Financeiro</a></li>
+										</ul>
+									</li>
+
+									<li><a href="#">Solicitar Demonstração</a></li>
+									<li><a href="#">Área do Cliente</a></li>
+								</ul>
+							</nav>
 						</div>
 					</div>
 				</div>
 			</div>
 		</header>
-
 		<section id="home">
 			<div class="main-banner">
 				<div class="container">
@@ -190,15 +249,28 @@
 					<a id="pause-opening" href="javascript:void(0);">X</a>
 				</div>
 			</div>
+			<div class="client-title dk-hidden">
+				<div class="container">
+					<div class="row">
+						<div class="col twelve">
+							<h2 class="block-titles">Nossas Soluções</h2>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="solutions-banner">
 				<div class="container">
 					<div class="row">
-						<ul>
+						<ul class="bx-solucoes">
 							<li class="col three" ><a href="#"><span><img src="img/maleta.png" alt="arte"></span> <strong>Soluções Empresarias</strong></a></li>
 							<li class="col three"><a href="#"><span><img src="img/solucoes.png" alt="arte"></span> <strong>Soluções Contábeis</strong></a></li>
 							<li class="col three"><a href="#"><span><img src="img/carrinho.png" alt="arte"></span> <strong>Soluções Comerciais</strong></a></li>
 							<li class="col three"><a href="#"><span><img src="img/pessoas.png" alt="arte"></span> <strong>Soluções para RH</strong> </a></li>
 						</ul>
+						<div class="controlers dk-hidden">
+							<span class="bt-solucoes-prev"></span>
+							<span class="bt-solucoes-next"></span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -248,7 +320,7 @@
 					<div class="row">		
 						
 						<div class="slider-features">					
-							<ul>
+							<ul class="bx-clientes">
 								<li class="col two"><a href="#"><img alt="img" src="img/clientes.jpg"></a></li>
 								<li class="col two"><a href="#"><img alt="img" src="img/clientes.jpg"></a></li>
 								<li class="col two"><a href="#"><img alt="img" src="img/clientes.jpg"></a></li>
@@ -262,6 +334,10 @@
 								<li class="col two"><a href="#"><img alt="img" src="img/clientes.jpg"></a></li>
 								<li class="col two"><a href="#"><img alt="img" src="img/clientes.jpg"></a></li>
 							</ul>
+							<div class="controlers dk-hidden">
+								<span class="bt-clientes-prev"></span>
+								<span class="bt-clientes-next"></span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -311,7 +387,7 @@
 					<div class="row">		
 							
 							<div class="slider-features">					
-								<ul>
+								<ul class="bx-award">
 									<li class="col two"><a href="#"><img alt="img" src="img/premio-1.png"></a></li>
 									<li class="col two"><a href="#"><img alt="img" src="img/premio-2.png"></a></li>
 									<li class="col two"><a href="#"><img alt="img" src="img/premio-3.png"></a></li>
@@ -319,6 +395,10 @@
 									<li class="col two"><a href="#"><img alt="img" src="img/premio-5.png"></a></li>
 									<li class="col two"><a href="#"><img alt="img" src="img/premio-6.png"></a></li>
 								</ul>
+								<div class="controlers dk-hidden">
+									<span class="bt-award-prev"></span>
+									<span class="bt-award-next"></span>
+								</div>
 							</div>
 					</div>
 				</div>
